--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.10.1",
